--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
+    "@angular/cli": "^16.1.4",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
-    "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
@@ -26,7 +26,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.9",
-    "@angular/cli": "~15.2.9",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
