--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/cli": "^16.1.4",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
+    "@angular/core": "^16.1.5",
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
