--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
-    "@angular/cli": "^16.1.4",
-    "@angular/common": "^15.2.0",
-    "@angular/compiler": "^15.2.0",
-    "@angular/core": "^16.1.5",
-    "@angular/forms": "^15.2.0",
-    "@angular/platform-browser": "^15.2.0",
-    "@angular/platform-browser-dynamic": "^15.2.0",
-    "@angular/router": "^15.2.0",
+    "@angular/animations": "~12.2.17",
+    "@angular/cdk": "^11.2.5",
+    "@angular/cli": "~12.2.18",
+    "@angular/common": "~12.2.17",
+    "@angular/compiler": "~12.2.17",
+    "@angular/compiler-cli": "~12.2.17",
+    "@angular/core": "~12.2.17",
+    "@angular/material": "^11.2.5",
+    "@angular/platform-browser": "~12.2.17",
+    "@angular/platform-browser-dynamic": "~12.2.17",
+    "@angular/router": "~12.2.17",
     "@ng-bootstrap/ng-bootstrap": "^15.1.0",
     "bootstrap": "^5.3.0",
     "rxjs": "~7.8.0",
