--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/common": "~12.2.17",
     "@angular/compiler": "~12.2.17",
     "@angular/compiler-cli": "~12.2.17",
-    "@angular/core": "~12.2.17",
+    "@angular/core": "^12.2.9",
     "@angular/material": "^11.2.5",
     "@angular/platform-browser": "~12.2.17",
     "@angular/platform-browser-dynamic": "~12.2.17",
