--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "@angular/compiler": "~15.2.9",
     "@angular/compiler-cli": "~15.2.9",
     "@angular/core": "^15.2.9",
-    "@angular/material": "^11.2.5",
     "@angular/platform-browser": "~15.2.9",
     "@angular/platform-browser-dynamic": "~15.2.9",
     "@angular/router": "~15.2.9",
-    "@ng-bootstrap/ng-bootstrap": "^15.1.0",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
